--- a/test-chart/Chart.yaml
+++ b/test-chart/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: test-chart
 version: 0.1.0
-appVersion: 0.1.0
+appVersion: "1.16.0"
 kubeVersion: ">= 1.27.6"
 description: A Helm chart for Kubernetes
 maintainers:
