--- a/test-chart/templates/service.yaml
+++ b/test-chart/templates/service.yaml
@@ -5,8 +5,8 @@ metadata:
   name: {{ .Values.Name }}-service
   namespace: {{ .Release.Namespace | quote }}
   labels:
-    app.kubernetes.io/name: {{ .Values.labels.app.kubernetes.io/name }}
-    app.kubernetes.io/part-of: {{ .Values.labels.app.kubernetes.io/part-of }}
+    app.kubernetes.io/name: {{ .Values.labels.appKubernetesIoName }}
+    app.kubernetes.io/part-of: {{ .Values.labels.appKubernetesIoPartOf }}
 spec:
   ports:
     - protocol: {{ .Values.service.protocol }}
