--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -6,12 +6,7 @@ metadata:
   name: {{ .Values.name }}-ingress
   namespace: {{ .Release.Namespace }}
   annotations: ## 여기에 ingress-controller를 명시해줌
-    kubernetes.io/ingress.class: {{ .Values.annotations.nginx.ingressClass }}
-    nginx.ingress.kubernetes.io/ssl-redirect: {{ .Values.annotations.nginx.sslRedirect | quote }}
-    nginx.ingress.kubernetes.io/secure-backends: {{ .Values.annotations.nginx.secureBackends | quote }}
-    nginx.ingress.kubernetes.io/enable-http2: {{ .Values.annotations.nginx.enableHttp2 | quote }}
-    nginx.ingress.kubernetes.io/backend-protocol: {{ .Values.annotations.nginx.backendProtocol | quote }}
-    cert-manager.io/cluster-issuer: {{ .Values.annotations.nginx.clusterIssuer }}
+  {{- include "ingress.annotations" .Values.ingress.annotations }}
 spec:
   ingressClassName: {{ .Values.ingress.className }}
   tls:
