--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -5,14 +5,13 @@ metadata:
   name: {{ .Values.name }}-service
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ .Values.labels.appKubernetesIoName }}
-    app.kubernetes.io/part-of: {{ .Values.labels.appKubernetesIoPartOf }}
+  {{- include "service.labels" .Values.service.labels }}
 spec:
   ports:
     - protocol: {{ .Values.service.protocol }}
       port: {{ .Values.service.port }}
       targetPort: {{ .Values.container.port }}
   selector:
-    app: {{ .Values.Name }}
+    app: {{ .Values.name }}
   type: {{ .Values.service.type }}
 {{- end }}
